# SLMProject

./: .gitignore  README.md  pyproject.toml
config/: colab_smoke.yaml  default.yaml
docs/: ab_case_study_plan.md
notebooks/: 01_extraction.ipynb  02_clustering.ipynb  03_audit.ipynb  04_evaluation.ipynb
scripts/: 01_extract.py  02_cluster.py  03_audit.py  04_evaluate.py  _cli.py  build_notebooks.py  colab_setup.sh
src/guardrail_audit/: __init__.py
src/guardrail_audit/clustering/: __init__.py  cluster_prototypes.py  normalize.py
src/guardrail_audit/data/: __init__.py  data_loader.py
src/guardrail_audit/evaluation/: __init__.py  benchmark.py
src/guardrail_audit/explainer/: __init__.py  audit_pipeline.py  distance_engine.py  explainer_api.py
src/guardrail_audit/extraction/: __init__.py  extract_embeddings.py
src/guardrail_audit/models/: __init__.py  model_init.py
src/guardrail_audit/utils/: __init__.py  config.py
tests/: test_config.py  test_distance_engine.py  test_evaluation.py  test_normalize.py
