[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-audit"
version = "1.0.0"
description = "Prototype-driven interpretability auditing for SLM safety guardrails"
authors = [{ name = "Yogi Joshi" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers==4.44.2",
    "datasets>=2.19.0",
    "scikit-learn==1.5.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
quant = ["bitsandbytes>=0.45.0", "accelerate==0.33.0"]
explainer = ["openai>=1.30.0", "anthropic>=0.28.0"]
dev = ["pytest>=8.0", "pandas>=2.2", "matplotlib>=3.8", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
